--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "next": "12.1.4",
     "react": "18.0.0",
+    "react-chat-engine": "^1.11.22",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
